content/v1.3.0/zh/api/core-extra/DictionaryByType.md
---
title: "DictionaryByType"
---
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `DictionaryByType`
- [← 本领域 / 返回 core-extra](./)
- [↑ API 目录](../)
- [🏠 首页 v1.3.0](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# DictionaryByType

**Namespace:** TaleWorlds.Library.EventSystem
**Module:** TaleWorlds.Library
**Type:** `public class DictionaryByType`
**Base:** 无
**File:** `TaleWorlds.Library/EventSystem/DictionaryByType.cs`

## 概述

`DictionaryByType` 位于 `TaleWorlds.Library.EventSystem`，它通过这组公开成员把对应子系统的状态、行为或流程入口暴露给 mod 开发者。阅读时先看属性代表“它持有什么状态”，再看方法代表“它允许你做什么”。

## 心智模型

先从命名空间 `TaleWorlds.Library.EventSystem` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要方法

### GetClone
`public IDictionary<Type, object> GetClone()`

**用途 / Purpose:** 获取 `clone` 的当前值。

### Clear
`public void Clear()`

**用途 / Purpose:** 处理 `clear` 相关逻辑。

## 使用示例

```csharp
var value = new DictionaryByType();
value.GetClone();
```

## 参见

- [完整类目录](../catalog)